汉化 conf/battle 文件

--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -62,13 +62,13 @@ critical_rate: 100
 // 默认值是 15, 表示此选项包含: 玩家(1) + 魔物(2) + 宠物(4) + 生命体(8)
 attack_walk_delay: 15
 
-// Move-delay adjustment after being hit. (Note 2)
-// The 'can't walk' delay after being hit is calculated as a percentage of the damage animation duration.
-// NOTE: Only affects the normal delay from a single attack, not the delay added by the multihit_delay option below.
+// 被击中后的移动延迟调整 (Note 2)
+// 被击中后“不能行走”的延迟是按照伤害动画持续时间的百分比计算的.
+// 注意:只影响一次攻击的正常延迟，而不是下面的multihit_delay选项所添加的延迟。
 pc_damage_walk_delay_rate: 20
 damage_walk_delay_rate: 100
 
-// Move-delay adjustment for multi-hitting attacks.
+// 多击攻击的移动延迟调整.
 // When hit by a multi-hitting skill like Lord of Vermillion or Jupitel Thunder, characters will be 
 // unable to move for an additional "(number of hits -1) * multihit_delay" milliseconds.
 // 80 is the setting that feels like Aegis (vs Sonic Blows)
@@ -85,10 +85,12 @@ player_damage_delay_rate: 100
 // 2 = both (either one works)
 undead_detect_type: 0
 
-// Does HP recover if hit by an attribute that's same as your own? (Note 1)
+// 被同属性伤害攻击是否会恢复HP(例:穿火铠甲,被火箭攻击时会增加血量)? (Note 1)
 attribute_recover: no
 
-// What is the minimum and maximum hitrate of normal attacks? 
+// 普通攻击的最小和最大命中率是多少? (百分比选项)
+// 若最小命中率(min_hitrate)大于最大命中率(max_hitrate), 
+// 则最小命中率(min_hitrate)会等同于最大命中率(max_hitrate)
 min_hitrate: 5
 max_hitrate: 100
 
@@ -148,7 +150,7 @@ vit_penalty_count: 3
 // 如果 vit_penalty_type 为 1 则这里表示百分比, 为 2 则表示具体数值
 vit_penalty_num: 5
 
-// Use alternate method of DEF calculation for physical attacks.
+// 使用物理攻击的DEF计算替代方法.
 // With 0, disabled (use normal def% reduction with further def2 reduction)
 // At 1 or more defense is subtraction of (DEF * value).
 // eg: 10 + 50 def becomes 0 + (10*type + 50)
@@ -157,12 +159,12 @@ weapon_defense_type: 0
 // MDEF, same as above. (MDEF * value)
 magic_defense_type: 0
 
-// Change attacker's direction to face opponent on every attack? (Note 3)
-// NOTE: On official servers knockback of some skills like Firewall is always based on the
-// last direction walked. Even when attacking in a completely different direction, the
-// knockback direction won't change, so e.g. if you walk north and then attack an enemy to
-// the south you will still be knocked back to the south by Firewall. Immobile monsters
-// will always be knocked back to the south as their default direction is north.
+// 每次攻击时改变攻击者的方向以面对对手? (Note 3)
+//注意:在官方服务器上击退一些技能，如防火墙总是基于
+//最后一个方向行走。即使攻击的方向完全不同
+//击退方向不会改变，因此，例如，如果你向北走，然后攻击敌人
+//你仍然会被防火墙打回南方。不动的怪物
+//总是会被打回南方，因为它们默认的方向是北方。
 attack_direction_change: 0
 
 // For those who is set, their innate attack element is "not elemental"
@@ -171,17 +173,17 @@ attack_direction_change: 0
 // damage against Ghost-type targets with normal attacks (eg: vs. Ghostring).
 attack_attr_none: 14
 
-// Rate at which equipment can break (base rate before it's modified by any skills)
+// 装备被破坏的速率(任何技能修改前的基本速率)
 // 1 = 0.01% chance. Default for official servers: 0
 equip_natural_break_rate: 0
 
-// Overall rate of which your own equipment can break. (Note 2)
+// 你自己的装备可能损坏的总比率. (Note 2)
 // This rate affects penalty breaking rate of skills such as power-thrust and your natural breaking rate 
 // (from equip_natural_break_rate). If a Sage's endow skill fails and this is above 0, the selected char's
 // weapon will be broken.
 equip_self_break_rate: 100
 
-// Overall rate at which you can break target's equipment. (Note 2)
+// 破坏目标装备的总速率. (Note 2)
 // This affects the behaviour of skills like acid terror and meltdown
 equip_skill_break_rate: 100
 
@@ -203,18 +205,18 @@ delay_battle_damage: yes
 // 设计的一个严格选项, 应该没有太大的用处. 
 arrow_decrement: 1
 
-// Should ammo be unequipped when unequipping a weapon?
-// Official behavior is "yes".
+// 脱下武器时.子弹弹药是否同时脱下?
+// 官方的行为是“yes”.
 ammo_unequip: yes
 
 // Should a suitable weapon be equipped when equipping ammo?
 // Official behavior is "yes".
 ammo_check_weapon: yes
 
-// Should the item script bonus 'Autospell' check for range/obstacles before casting?
-// Official behavior is "no", setting this to "yes" will make skills use their defined
-// range. For example, Sonic Blow requires a 2 cell distance before autocasting is allowed.
-// This setting also affects autospellwhenhit.
+// 由物品脚本触发的 'autospell' 在自动咏唱技能之前, 是否先检查与目标的距离?
+// 官服的设定为 "no", 如果修改为 "yes" 的话, 会让技能使用他们在 skill_db 中定义的距离来进行判断.
+// 例如: 音速投掷要求在距离目标2格范围内, 才能被 'autospell' 自动咏唱发动.
+// 此设置同时也对 autospellwhenhit 脚本指令有效.
 autospell_check_range: no
 
 // If both the attacker and the target are on the same tile, should the target be knocked back to the left?
