--- a/conf/battle/client.conf
+++ b/conf/battle/client.conf
@@ -78,10 +78,10 @@ hide_woe_damage: no
 // sakexe 0628 (and later): 100
 pet_hair_style: 100
 
-// Visible area size (how many squares away from a player they can see)
+// 可见区域大小(玩家可以看到多少个方格)
 area_size: 14
 
-// Maximum walk path (how many cells a player can walk going to cursor)
+//最大行走路径(注:玩家在光标上可以行走多少个单元格)
 max_walk_path: 17
 
 // Maximum allowed 'level' value that can be sent in unit packets.
@@ -118,21 +118,21 @@ save_clothcolor: yes
 // 更换服装风格后, 在玩家下线的时是否保存服装风格信息
 save_body_style: yes
 
-// Do not display cloth colors for the wedding class?
+// 是否在要婚礼礼服显示染色?(考虑客户端图档染色.如果缺失会引起跳框,建议关闭)
 // Note: Both save_clothcolor and wedding_modifydisplay have to be enabled
 // for this option to take effect. Set this to yes if your cloth palettes 
 // pack doesn't has wedding palettes (or has less than the other jobs)
 wedding_ignorepalette: no
 
-// Do not display cloth colors for the Xmas costume?
+// 是否在要圣诞衣服外观显示染?(考虑客户端图档染色.如果缺失会引起跳框,建议关闭)
 // Set this to yes if your cloth palettes pack doesn't have Xmas palettes (or has less than the other jobs)
 xmas_ignorepalette: no
 
-// Do not display cloth colors for the Summer costume?
+// 是否在要夏季服饰衣服外观显示染?(考虑客户端图档染色.如果缺失会引起跳框,建议关闭)
 // Set this to yes if your cloth palettes pack doesn't have Summer palettes (or has less than the other jobs)
 summer_ignorepalette: no
 
-// Do not display cloth colors for the Hanbok costume?
+// 是否在要韩服服饰衣服外观显示染?(考虑客户端图档染色.如果缺失会引起跳框,建议关闭)
 // Set this to yes if your cloth palettes pack doesn't have Hanbok palettes (or has less than the other jobs)
 hanbok_ignorepalette: no
 
@@ -140,7 +140,11 @@ hanbok_ignorepalette: no
 // Set this to yes if your cloth palettes pack doesn't have Oktoberfest palettes (or has less than the other jobs)
 oktoberfest_ignorepalette: no
 
-// Set this to 1 if your clients have langtype problems and can't display motd properly
+// 若客户端由于 langtype 问题而无法正常显示 conf/motd.txt 文件中配置的公告信息时,
+// 可以将此选项改成 1 . 若没问题的话, 请不要修改此选项.
+//
+// 使用 0 的话, 公告内容在聊天栏显示的颜色是绿色.
+// 使用 1 的话, 公告内容显示在聊天栏的颜色将和 dispbottom 脚本指令时输出的文本颜色一样.
 motd_type: 0
 
 // 当玩家登录游戏时, 是否在聊天窗口中显示熊猫模拟器的版本号? 
@@ -154,27 +158,33 @@ display_version: no
 // 建议保持此选项为 yes.
 display_hallucination: yes
 
-// Set this to 1 if your client supports status change timers and you want to use them
-// Clients from 2009 onward support this
+// 是否在状态图标上显示结束倒计时?
+// 从 2009 年的客户端开始, 状态图标上可以显示出状态的结束倒计时.
+// 设置为 no 的话, 那么就算是 2015 的客户端也不会显示倒计时.
+//
+// 注意: 关闭此选项的话, 技能的公用延迟也将变成 0.
+// 如果你希望在保留状态倒计时特性的情况下, 关闭技能的公用延迟,
+// 那么请保持这里的值为 yes, 然后修改 conf/battle/extend.conf 文件
+// 中的 close_skill_common_delay 选项为 yes.
 display_status_timers: yes
 
 // 是否在服务端对“丢骰子”表情的结果进行随机处理,
 // 防止客户端通过伪造封包等手段, 来指定骰出来点数? (开关选项)
 client_reshuffle_dice: yes
 
-// Sorts the character and guild storage before it is sent to the client.
-// Official servers do not sort storage. (Note 1)
-// NOTE: Enabling this option degrades performance.
+// 在将个人、公会仓库中的物品信息发送给客户端之前, 是否先根据物品编号进行排序. 
+// 官方服务器不会对仓库的物品进行排序. (开关选项)
+// 注意: 启用此选项会服务端降低性能.
 client_sort_storage: no
 
-// Do we allow to change guilde emblem during woe_time?
+// 是否允许“公会会长”在GVG攻城战期间更换公会图标? (开关选项)
 emblem_woe_change: yes
 
 // 公会图标最多只能允许百分之多少的透明色像素点? (百分比选项)
 // 若一个公会图标中透明的部分超过设定的百分比, 那么会认为此图标无效.
 emblem_transparency_limit: 80
 
-// Update enemy position while in invisible state? (Note 1)
+// 在隐形状态下更新敌人位置? (Note 1)
 // NOTE: Set to 'no' will make client won't update enemy position unless the players have "Intravision" effect.
 //       So that will help client handling WPE - Maya Purple Hack stuff.
 //       But it will screw 'the game animation display' while players in invisible state.
@@ -185,9 +195,12 @@ update_enemy_position: yes
 // 设置为 no 的话, 则瞬移、过图、或者登录时, 面向方向一律朝北 (官服设定).
 spawn_direction: no
 
-// Show the MVP EXP reward message for clients 2013-12-23cRagexe and newer? (Note 1)
-// kRO removed the packet and this re-enables the message.
-// Official: Disabled.
+// 在 2013-12-23 及更新的客户端版本中, 是否显示打死 MVP 魔物后获得的 MVP 经验奖励信息? (开关选项)
+// MVP 经验奖励信息是指: 恭喜您杀死了强大的魔物! 成为了荣耀的 MVP! 您的奖励经验为 %u !!
+// 
+// 韩服的客户端从 2013-12-23 开始移除了这条信息, 
+// 使用此选项可以让地图服务器主动发送一条类似的信息进行替代.
+// 默认值为: no.
 mvp_exp_reward_message: no
 
 // Send ping timer
