--- a/conf/battle/exp.conf
+++ b/conf/battle/exp.conf
@@ -136,13 +136,18 @@ quest_exp_rate: 100
 // 如果想启用此选项, 那么为了平衡考虑, rAthena 官方推荐将此选项配置为 5 或者 10.
 heal_exp: 0
 
-// The rate of exp. that is gained by the process of resurrection, a unit is 0.01%.
-// Experience calculations for the experience value * level difference of the person revived / 100 * resurrection_exp/10000 which the revived player has can be got.
+// 使用复活技能时, 获得的基础/职业经验值倍率. (10000 = 100%)
+// 获得的基础经验值 = (复活目标玩家的基础经验值 x 复活目标与自己的基础等级差 x resurrection_exp / 1000000)
+// 获得的职业经验值 = (复活目标玩家的职业经验值 x 复活目标与自己的职业等级差 x resurrection_exp / 1000000)
+// 
+
 resurrection_exp: 0
 
-// The rate of job exp. when using discount and overcharge on an NPC
-// (in 0.01% increments - 100 is 1%, 10000 is normal, 20000 is double.)
-// The way it is calculated is (money received * skill lv) * shop_exp / 10000.
+// 在NPC开设的商店进行低价买进, 高价卖出时获得的职业经验值倍率. (10000 = 100%)
+// 低价买进时获得的职业经验值 = (最终买进价格 * 低价买进技能等级 * shop_exp / 10000)
+// 高价卖出时获得的职业经验值 = (最终卖出价格 * 高价卖出技能等级 * shop_exp / 10000)
+//
+
 shop_exp: 0
 
 // 玩家在 PVP 地图中击杀魔物是否能获得经验?
@@ -193,18 +198,20 @@ disp_experience: no
 // 默认值为: no
 disp_zeny: no
 
-// Use the contents of db/statpoint.txt when doing a stats reset and leveling up? (Note 1)
-// If no, an equation will be used which preserves statpoints earned/lost 
-// through external means (ie: stat point buyers/sellers)
+// 当属性点重置或者玩家升级的时候, 是否参照 db/[pre-]re/statpoint.txt 的内容来发配属性点? (开关选项)
+// 若设置为 no, 那么将保留玩家获得/失去的属性点. (如果拥有售卖属性点的NPC的话, 应该设置为 no)
+// 否则, 为了防止一不小心脚本出现刷属性点漏洞, 可以将此选项设置为 yes
 use_statpoint_table: yes
 
-// EXP cost for cast PR_REDEMPTIO (Note 2)
-exp_cost_redemptio: 1
+// 使用“救赎”技能(PR_REDEMPTIO), 需要扣除百分之多少的基础经验值? (百分比选项)
+// 默认值为: 1 即 1%
+exp_cost_redemptio: 0
 
-// How many player needed to makes PR_REDEMPTIO's EXP penalty become 0?
-// If by default, the 'exp_cost_redemptio' is 1 (1%) and every single player revived the penalty is reduced to 0.2%,
-// it means 'exp_cost_redemptio_limit' is 5.
+// 需要同时复活多少玩家才能让“救赎”技能不扣基础经验值?
+// 若默认情况下 'exp_cost_redemptio' 选项的值为 1 (1%) 的话, 那么每多复活一个玩家, 
+// 扣除的基础经验将减少 (exp_cost_redemptio / exp_cost_redemptio_limit)% = (1 / 5)% = 0.2%
 exp_cost_redemptio_limit: 5
 
-// EXP cost for cast LG_INSPIRATION (Note 2)
+// 使用“圣灵感应”技能(LG_INSPIRATION), 需要扣除百分之多少的基础经验值? (百分比选项)
+// 默认值为: 1 即 1%
 exp_cost_inspiration: 1
