--- a/conf/battle/gm.conf
+++ b/conf/battle/gm.conf
@@ -33,7 +33,11 @@
 atcommand_symbol: @
 charcommand_symbol: #
 
-// The maximum quantity of monsters that can be summoned per GM command (0 denotes an unlimited quantity)
+// 当GM使用 @monster 指令召唤魔物时, 
+// 每次使用指令最多召唤几只魔物? (填写 0 表示没有限制)
+// 
+// 为了防止 GM 使用 @monster 指令召唤出过多的魔物而导致服务器卡滞
+// 此选项建议不要设置为 0
 atcommand_spawn_quantity_limit: 100
 
 // 当 GM 使用 @slaveclone 指令召唤出克隆随从时, 
@@ -44,26 +48,49 @@ atcommand_spawn_quantity_limit: 100
 // 能够主动攻击普通魔物和主人的敌对目标. 
 atcommand_slave_clone_limit: 25
 
-// If 'no', commands require exact player name. If 'yes', entering a partial 
-// name will work, as long as there's only one match from all players in the 
-// current map server.
-// Some critical atcommands like jail, ban and a few others will still require you to enter the full name.
-// It will always work for charcommands when the setting is enabled.
+// 是否允许GM指令在搜索玩家名称时, 采用模糊匹配的方式? 
+// 
+// 若填写 no 那么GM指令将要求你输入完整的目标玩家名称. 
+// 若填写 yes 那么只需要输入玩家的部分名称, 并且这部分名称可以在当前的
+// 地图服务器中找到某个独一无二匹配的玩家即可. 
+//
+// 此外一些后果可能会很严重的指令比如 jail, ban 等, 无论此选项如何设置,
+// 还是需要填写目标玩家的完整名称才能使用.
+// 
+// 此选项对 @ 开头的GM指令和 # 开头的角色指令都有效果.
+//
+// 例如:
+// 现在GM01在线, 还有一个玩家叫“巴风特”在线, 此时如果设置为 yes 那么使用
+// “@recall 巴”时, 只要没有其他名字是“巴”开头的玩家在线, 那么地图服务器
+// 将能够准确的将“巴风特”玩家召唤到你的身边. 
+// 如果设置为 no 的话, 那么输入“@recall 巴”地图服务器会提示“找不到玩家”. 
 partial_name_scan: yes
 
-// Ban people that try trade dupe.
-// Duration of the ban, in minutes (default: 5). To disable the ban, set 0.
+// 是否封杀尝试“复制交易”的玩家一定的时间
+// 封杀时间的单位为分钟(默认值为: 5分钟). 若不想封杀他们, 设置为 0 即可. 
+//
+// 什么是“复制交易”? 
+// 答复: 简单来说, 就是一些玩家利用交易系统的漏洞, 从而实现复制游戏道具的目的, 
+// 将一个道具变成两个, 这会严重影响游戏平衡性, 建议严打. 
 ban_hack_trade: 5
 
-// requires RENEWAL_EXP or RENEWAL_DROP to be enabled (src/config/renewal.hpp)
-// modifies @mobinfo to display the users' real drop rate as per renewal_drop formula
-// modifies @iteminfo to not display the minimum item drop rate (since it can't tell the mob level)
-// modifies @whodrops to display the users' real drop rate as per renewal_drop formula
+// 该选项仅针对“复兴后”版本有效, 复兴前的GM请无视
+//
+// 我们知道复兴后物品的掉率会随着角色等级的提高而做出一些变化, 
+// 例如“掉率惩罚”机制. 这就导致不同级别的玩家, 使用一些查询指令在查询
+// 物品掉率时, 拿到的掉率数据应该也是因人而异的. 
+// 
+// 将此选项改成 1 之后, 将会导致如下效果: (默认值为 1)
+// - 调整 @mobinfo 指令的显示结果, 能够根据玩家的等级显示出实际的掉率
+// - 调整 @iteminfo 指令的显示结果, 不显示物品的最大掉率 (因为没有具体的魔物等级, 无法进行计算)
+// - 调整 @whodrops 指令的显示结果, 能够根据玩家的等级显示出实际的掉率
+// 
+// 若改成 0 的话, 那么将显示数据库中所设定的标准掉率值
 atcommand_mobinfo_type: 1
 
-// Should atcommands trigger level up events for NPCs? (Note 1)
-// This option is for @baselevelup and @joblevelup
-// Default: no
+// 当使用 @baselevelup 和 @joblevelup 指令来调整角色的基础/职业等级时,
+// 是否会触发 NPC 的 OnPCBaseLvUpEvent 和 OnPCJobLvUpEvent 事件?
+// 默认值为: no (开关选项)
 atcommand_levelup_events: no
 
 // Disable atcommands while a player is attached to a npc? (Note 1)
