--- a/conf/battle/homunc.conf
+++ b/conf/battle/homunc.conf
@@ -22,60 +22,67 @@
 //             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
-// Homunculus setting (Note 3)
-// Activates various 'quirks' that makes them behave unlike normal characters.
-// 0x01: Can't be targetted by support skills (except for their master)
-// 0x04: Mobs will always go after them instead of players until attacked
-// 0x08: Copy their master's speed on spawn/map-change
-// 0x10: They display luk/3+1 instead of their actual critical in the
-//       stat window (by default they don't crit)
-// 0x20: Their Min-Matk is always the same as their max
-// 0x40: Skill re-use delay is reset when they are vaporized.
-// 0x80: Skill re-use delay is reset when they are warped (by skill or item) with player.
+// 人工生命体设置 (掩码选项)
+// 激活生命体的各种“怪癖”, 让它们的行为和其他角色不太一样(更有个性? 哈哈哈).
+// 0x01: 除了主人之外, 无法被其他玩家作为辅助技能的施法目标(加速术等)
+// 0x04: 让魔物尽量先攻击生命体而不是玩家
+//       实测效果发现者并不绝对优先攻击魔物, 但是感觉上会有明显变化
+// 0x08: 在过图或者召唤出来的时候, 复制主人的移动速度(这样就能跟上主人的快速移动)
+// 0x10: 让它们在属性面板中显示出 luk/3 + 1 的暴击率(默认情况下它们不会暴击)
+// 0x20: 它们的“最小魔法攻击力”永远等于他们的“最大魔法攻击力”
+// 0x40: 当生命体安息之后立即恢复其技能冷却
+// 0x80: 当生命体和玩家一起传送的时候(通过技能或者物品) 立即恢复其技能冷却
+//
+// 默认值为: 0x3D (即 0x01 + 0x04 + 0x08 + 0x10 + 0x20)
 hom_setting: 0x3D
 
-// The rate a homunculus will get friendly by feeding it. (Note 2)
+// 喂食生命体时的亲密度上升倍率 (百分比选项)
 homunculus_friendly_rate: 100
 
-// Can you name a homunculus more then once? (Note 1)
+// 是否允许玩家无限制的给生命体重命名?  (开关选项)
 hom_rename: no
 
-// Minimum intimacy to evo the homunculus
+// 生命体亲密度必须达到多少, 才能用贤者之石来进化? 
 homunculus_evo_intimacy_need: 91100
 
-// Reset intimacy after evolution to:
+// 使用贤者之石进化生命体后, 生命体的亲密度数值重设为: 
 homunculus_evo_intimacy_reset: 1000
 
-// Intimacy needed to use Evolved Vanilmirth's Bio Explosion
+// 巴尼米乐斯(Vanilmirth)的亲密度必须达到多少时, 才能使用“生物爆炸”技能? 
 hvan_explosion_intimate: 45000
 
-// Show stat growth to the owner when an Homunculus levels up
+// 当生命体升级时, 是否在主人的聊天栏中显示成长属性等信息
 homunculus_show_growth: yes
 
-// Does autoloot work, when a monster is killed by homunculus only?
+// 当生命体打死魔物时, 是否自动拾取掉落的道具? 
 homunculus_autoloot: no
 
-// Should homunculi Vaporize when Master dies? (Note 2)
-// A homunculus will not Vaporize if their HP is below 80%.
+// 当主人死亡时, 生命体的HP大于百分之多少时将自动安息? (百分比选项)
+// 默认值为 80
 homunculus_auto_vapor: 80
 
-// Max level for regular Homunculus
+// 生命体的最大等级为多少级? 
 homunculus_max_level: 99
 
-// Max level for Homunculus S
+// 生命体S的最大等级为多少级? 
 homunculus_S_max_level: 175
 
-// Growth level for Homunculus S
-// This is the level at which homunculus S can use their growth tables
-// Without this, a shuffle causes all levels of a Homunculus S to use their
-// growth tables, causing imbalanced stats
+// 生命体S达到多少级时会采用与其对应的属性成长表?
+// 
+// 此选项默认值为  99, 意味着:
+// 当“生命体”在 99 级变异成“生命体S”之后, 就会采用 db/[pre-]re/homunculus_db.txt 中
+// 与其变异后 Class 对应的属性成长表来作为每次升级后能力提升的参考依据.
+// 
+// 若将此选项填写 120, 意味着:
+// 生命体S在 99 ~ 120 这个阶段中, 还会继续使用“变异之前”的 Class/EvoClass 对应的属性
+// 成长表来作为每次升级后能力提升的参考依据.
 homunculus_S_growth_level: 99
 
 // Send auto-feed notice even if OFF (Note 1) 
 // Official: yes
 homunculus_autofeed_always: yes
 
-// Is getting exp/item from the homunculus disabled when their master's idle?
+// 当他们的主人空闲时，从生命体获得exp/item是否被禁用??
 // Set to no, or the amount of seconds (NOT milliseconds) that need to pass before considering
 // a character idle.
 // Characters in a chat/vending are always considered idle.
@@ -104,17 +111,17 @@ hom_idle_no_share: no
 // It will only apply to homunculus-only kills and it will not affect normal autoloot and party share options.
 idletime_hom_option: 0x1F
 
-// The rate at which homunculus gain experience from kills. (Note 2)
+// 生命体使用技能从击杀中获得经验值的倍率. (Note 2)
 // Only applies to renewal mode.
 // Official: 10%
 homunculus_exp_gain: 10
 
-// The hunger rate, less than or equal to, at which a homunculus' hunger delay changes. (Note 2)
+// 饥饿率，小于或等于，一个生命体饥饿延迟的变化. (Note 2)
 // See 'homunculus_starving_delay' for the delay value.
 // Set to 0 to disable.
 // Official: 10
 homunculus_starving_rate: 10
 
-// Homunculi normally lose hunger every 60 seconds but when the 'homunculus_starving_rate' is met the hunger delay drops to 20 seconds (in milliseconds).
+// 生命体通常每60秒失去饥饿值增加，但当'homunculus_starving_rate'被满足时，饥饿延迟下降到20秒(以毫秒为单位)。 (in milliseconds).
 // Official: 20 seconds
 homunculus_starving_delay: 20000
