--- a/conf/battle/items.conf
+++ b/conf/battle/items.conf
@@ -38,8 +38,8 @@ vending_over_max: yes
 // 但是商贩最终拿到手的钱, 只有(10000金币 - (10000金币 x 税率))的钱. 
 vending_tax: 500
 
-// Minimum total of purchase until taxes are applied.
-// Officially there is no tax for anything less than 100 million zeny.
+// 纳税前的最低购买总额.
+// 官方规定，任何低于1亿zeny的东西都不征税。
 // 0 will apply taxes to all transactions.
 vending_tax_min: 100000000
 
@@ -104,9 +104,11 @@ item_use_interval: 100
 // 否则他吃一个料理后, 就要等 1 分钟才能吃另一个. 
 cashfood_use_interval: 60000
 
-// Required level of bNoMagicDamage before Status Changes are blocked (Golden Thief Bug card).
-// For example, if left at 50. An item can give bNoMagicDamage,40;
-// which reduces magic damage by 40%, but does not blocks status changes.
+// 当 bNoMagicDamage 的等级达到多少才能拥有状态免疫效果? (黄金盗虫卡片).
+// 
+// 举个例子:
+// 如果将此选项设置为 50. 那么通过 bonus bNoMagicDamage,40; 指令设置 bNoMagicDamage 的等级是 40,
+// 那么受到魔法攻击的伤害将减少 40%, 但不会导致免疫加速术、天赐等状态.
 gtb_sc_immunity: 50
 
 // 是否允许通过叠加多张相同卡片的方式, 来提高“自动念咒”卡片的效果触发机率?
@@ -136,8 +138,8 @@ allow_consume_restricted_item: no
 // 那么装备本身是不会被此选项干扰的, 但插在上面被禁用的卡片将失去效果.
 allow_equip_restricted_item: yes
 
-// Allow changing of equipment while interacting with NPCs? (Note 1)
-// Default: yes
+// 当与 NPC 对话(产生交互)的时候, 是否允许切换装备(或使用道具)? (开关选项)
+// 默认值为: yes
 item_enabled_npc: yes
 
 // 是否在物品掉落到地面时, 检查其是否被“禁止掉落到地面”? (开关选项)
@@ -149,15 +151,19 @@ item_enabled_npc: yes
 // 默认值为: yes
 item_flooritem_check: yes
 
-// Set default bound type when item with BindOnEquip flag is equipped (see db/[pre-]re/item_db.yml)
-// 0 - None
-// 1 - Account
-// 2 - Guild
-// 3 - Party
-// 4 - Character
+// 装备后绑定的物品, 默认绑定的范围是?
+// 
+// 这里的“装备后绑定的物品”:
+// 是指在 db/[pre-]re/item_flag.txt 中, 标记包含 8 的物品.
+// 
+// 0 - 不绑定
+// 1 - 绑定到账号 (被绑物品只能在相同账号中的不同角色中流传)
+// 2 - 绑定到公会 (被绑物品只能在相同公会中的不同成员中流传)
+// 3 - 绑定到队伍 (被绑物品只能在相同队伍中的不同队友中流传)
+// 4 - 绑定到角色 (被绑物品只能在角色的背包内呆着)
 default_bind_on_equip: 4
 
-// Allow selling of bound/sell restricted items as Itemshop currency? (Note 3)
+// 允许出售捆绑/出售限制物品作为物品商店货币? (Note 3)
 // 0x0 = Bound/sell restricted items are unable to be sold to Itemshops/Shops
 // 0x1 = Bound items are able to be sold to Itemshops
 // 0x2 = Sell restricted items are able to be sold to Itemshops
@@ -166,7 +172,7 @@ default_bind_on_equip: 4
 // 0x8 = Only Guild Leader can sell BOUND_GUILD items to Shops or Itemshops (if 0x1 or 0x4 set)
 allow_bound_sell: 0x0
 
-// Turn on event refine chance (see db/{pre-}re/refine_db.yml)
+// 打开精炼变更事件 (see db/{pre-}re/refine_db.yml)
 // no = normal refine chances in effect (official/default value)
 // yes = event refine chances in effect
 event_refine_chance: no
@@ -177,16 +183,16 @@ event_refine_chance: no
 // config value is set high.
 broadcast_hide_name: 2
 
-// Enable to sell rental item to NPC shop? (Note 1)
+// 可以向NPC商店出售租赁物品? (Note 1)
 rental_transaction: yes
 
-// Sell rental item for 0 to NPC shop regardless of the item value in item_db? (Note 1)
+// 以0的价格向NPC商店出售租赁物品，而不考虑item_db中的物品价值? (Note 1)
 rental_item_novalue: no
 
-// Minimum purchase price of items at a normal Shop
+// 普通商店商品的最低购买价
 // Officially items cannot be purchased for less than 1 Zeny
 min_shop_buy: 1
 
-// Minimum sell price of items at a normal shop
+// 普通商店商品的最低售价
 // Officially items can be sold for 0 Zeny
 min_shop_sell: 0
