--- a/conf/battle/misc.conf
+++ b/conf/battle/misc.conf
@@ -22,87 +22,132 @@
 //             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
-// PK Server Mode.  Turns entire server pvp(excluding towns). Experience loss is doubled if killed by another player.
-// When players hunt monsters over 20 levels higher, they will receive 15% additional exp., and 25% chance of receiving more items. 
-// There is a nopvp.txt for setting up maps not to have pk on in this mode.  Novices cannot be attacked and cannot attack.
-// Normal pvp counter and rank display are disabled as well.
-// Note: If pk_mode is set to 2 instead of 1 (yes), players will receive a 
-//   manner penalty of 5 each time they kill another player (see manner_system 
-//   config to adjust how this will affect players)
+// 是否开启 PK 服务器模式. (开关选项)
+// 开启此模式之后, 全服除了城镇以外的所有地图都开启 PVP 模式.
+// 被其他玩家杀死的话, 会丢失两倍的经验(如果被魔物杀死掉 1% 经验, 那么被玩家杀死就掉 2% 经验).
+// 当玩家击杀比自己基础等级高 20 级及以上的魔物时, 将获得 15% 的额外经验奖励, 并且有 25% 的机率获得更多掉落物品.
+// 可以在 npc/mapflag/nopvp.txt 中设置某些地图不启用 PK 模式.
+// 初学者不能攻击其他人也不能被其他人攻击.
+// 在常规 PVP 地图中经常在游戏画面右下角出现的PVP排名计数器, 将不会出现在野外 PK 地图中.
+// 修改此选项之后, 使用 @reloadbattleconf 重新加载是无效的, 需要重启地图服务器.
+// 选项在 1 和 2 之间切换的时候, 使用 @reloadbattleconf 是可以立刻生效的.
+// 提示: 若将 pk_mode 的值设置为 2, 当玩家杀死另外一个玩家时, 将会被禁言五分钟.
+//       至于被禁言的时候会有什么限制, 取决于下面 manner_system 选项的设定.
 pk_mode: 0
 
 // Displays a message when the player enters a pk zone.
 // Only during pk_mode (Note 1)
 pk_mode_mes: yes
 
-// Manner/karma system configuration. Specifies how does negative manner
-// (red no chat bubble) affects players (add as needed):
-//  0: No penalties.
-//  1: Disables chatting (includes whispers, party/guild msgs, etc)
-//  2: Disables skill usage
-//  4: Disables commands usage
-//  8: Disables item usage/picking/dropping
-// 16: Disables room creation (chatrooms and vending shops)
+// 当玩家被禁言后(角色出现红色禁言气泡)时, 采用哪种处罚方式: 
+// 
+//  0: 没有惩罚.
+//  1: 禁止聊天 (包括私聊、队伍和公会聊天、以及其他聊天方式)
+//  2: 禁止使用技能
+//  4: 禁止使用指令 (比如你开放离线挂店指令 @at 给玩家使用的话, 那么玩家在禁言期间就用不了指令)
+//  8: 禁止使用/捡取/丢弃物品
+// 16: 禁止创建房间 (聊天室和露天商店、采购商店等)
+//
+// 有趣的是, 若你设置为 0 没有惩罚的话, 被禁言的角色虽然有红色禁言气泡
+// 但是还可以正常说话.
+//
+// 默认值为: 15 (1 + 2 + 4 + 8)
 manner_system: 15
 
-// For PK Server Mode. Change this to define the minimum level players can start PK-ing
+// 此选项仅用于 PK 服务器模式.
+// 基础等级大于等于多少的玩家, 才能进行 PK ?
 pk_min_level: 55
 
-// For PK Server Mode. It specifies the maximum level difference between
-// players to let them attack each other. 0 disables said limit.
+// 此选项仅用于 PK 服务器模式. 
+// 基础等级相差多少及以下的玩家才能相互攻击? 为 0 表示无限制.
 pk_level_range: 0
 
-// For PK servers. Damage adjustment settings, these follow the same logic
-// as their WoE counterparts (see guild.conf)  
+// 此选项仅用于 PK 服务器模式.
+// 在野外PVP地图中的近距离攻击伤害倍率(非技能) (百分比选项)
 pk_short_attack_damage_rate: 80
+
+// 此选项仅用于 PK 服务器模式.
+// 在野外PVP地图中的远距离攻击伤害倍率(非技能) (百分比选项)
 pk_long_attack_damage_rate: 70
+
+// 此选项仅用于 PK 服务器模式.
+// 在野外PVP地图中的物理技能伤害倍率 (百分比选项)
 pk_weapon_attack_damage_rate: 60
+
+// 此选项仅用于 PK 服务器模式.
+// 在野外PVP地图中的魔法技能伤害倍率 (百分比选项)
 pk_magic_attack_damage_rate: 60
+
+// 此选项仅用于 PK 服务器模式.
+// 在野外PVP地图中的特殊技能伤害倍率 (百分比选项)
 pk_misc_attack_damage_rate: 60
 
-// Display skill usage in console? (for debug only) (default: off) (Note 3)
+// 是否在终端窗口中显示技能使用信息? (仅供调试使用, 默认值为: off) (掩码选项)
+// 
+// 0x001 = 玩家单位
+// 0x002 = 魔物单位
+// 0x004 = 宠物单位
+// 0x008 = 生命体单位
+// 0x010 = 雇佣兵单位
+// 0x020 = 物品单位 - (在此无效)
+// 0x040 = 技能单位 - (在此无效)
+// 0x080 = NPC单位
+// 0x100 = 聊天室单位 - (在此无效)
+// 0x200 = 元素精灵单位
+//
+// 当你想启用此选项的时候:
+// 填写 0x001 那么只有玩家使用技能的信息会被显示到终端窗口
+// 填写 0x005 那么只有玩家(0x001) + 宠物(0x004) 使用技能的信息会被显示到终端窗口
+// 以此类推.
 skill_log: off
 
-// Display battle log? (for debug only) (default: off) (Note 1)
+// 是否在终端窗口中显示战斗相关日志? (仅供调试使用, 默认值为: off) (开关选项)
+// 事实上: 打开该选项只能输出“穿戴装备和脱下装备”的信息.
 battle_log: off
 
-// Display other stuff? (for debug only) (default: off) (Note 1)
+// 是否在终端窗口中显示其他信息? (仅供调试使用, 默认值为: off) (开关选项)
+// 打开此选项的话, 终端输出的信息将会非常杂乱, 不过信息很丰富.
 etc_log: off
 
-// Do you want to debug warp points? If set to yes, warp points will appear as flags.(Note 1)
-// It will also run on start-up a warp-check to print out which warp points lead directly on 
-// top of on-touch npcs (which can lead to infinite loopback warping situations)
+// 是否需要对传送点进行调试?
+// 若设置为 yes, 那么传送点的外观会变成一根旗帜. (开关选项)
+// 
+// 此外在地图服务器加载完成全部脚本之后, 还会运行一轮传送点的检查, 
+// 将具备以下可能会导致异常的传送点在地图服务器的终端窗口中显示出来:
+// 
+// 1.会把玩家送到一个“不可移动区域”的传送点(传过去玩家就不能移动了, 卡死在墙里)
+// 2.会把玩家送到另一个传送点范围内的传送点(可能会导致玩家被接连传送, 或者传送死循环)
 warp_point_debug: no
 
-// Choose if server begin with night (yes) or day (no)
+// 当服务器刚启动的时候, 是否处于夜晚状态? (yes = 夜晚, no = 白天)
 night_at_start: no
 
-// Define duration in msec of the day (default: 7200000 = 2 hours)
-// Set to 0 to disable day cycle (but not @day GM command).
-// Except 0, minimum is 60000 (1 minute)
+// 定义游戏中白天的长度, 单位为毫秒 (7200000 = 2小时)
+// 填写 0 可以禁止白天循环 (不过 @day 这个GM指令还是可以正常使用的).
+// 除了填写 0 来禁用之外, 这里的最小值只能为 60000 (1分钟)
 day_duration: 0
 
-// Define duration in msec of the night (default: 1800000 = 30 min)
-// Set to 0 to disable night cycle (but not @night GM command).
-// Except 0, minimum is 60000 (1 minute)
+// 定义游戏中夜晚的长度, 单位为毫秒 (1800000 = 30分钟)
+// 填写 0 可以禁止夜晚循环 (不过 @night 这个GM指令还是可以正常使用的).
+// 除了填写 0 来禁用之外, 这里的最小值只能为 60000 (1分钟)
 night_duration: 0
 
-// Using duel on pvp-maps
+// 是否允许在 PVP 地图中进行决斗?
 duel_allow_pvp: no
 
-// Using duel on gvg-maps
+// 是否允许在 GVG 地图中进行决斗?
 duel_allow_gvg: no
 
-// Allow using teleport/warp when dueling
+// 正在进行决斗时, 是否允许使用蝴蝶翅膀/苍蝇翅膀等传送行为?
 duel_allow_teleport: no
 
-// Autoleave duel when die
+// 死亡之后是否自动离开决斗?
 duel_autoleave_when_die: yes
 
-// Delay between using @duel in minutes
+// 使用决斗指令 @duel 的间隔时间, 单位为分钟
 duel_time_interval: 60
 
-// Restrict duel usage to same map
+// 双方是否必须处在同一张地图才可以决斗?
 duel_only_on_same_map: no
 
 // Determines max number of characters that can stack within a single cell. 
@@ -116,83 +161,92 @@ duel_only_on_same_map: no
 official_cell_stack_limit: 1
 custom_cell_stack_limit: 1
 
-// Allow autotrade only in maps with autotrade flag?
-// Set this to "no" to allow autotrade where no "autotrade" mapflag is set.
-// Set this to "yes" to only allow autotrade on maps with "autotrade" mapflag.
+// 是否只允许在具有 autotrade 地图标记(mapflag)的地图中进行离线挂店?
+// 设为  no - 表示只允许在未设置 autotrade 地图标记的地图上进行离线挂店, 设置了 autotrade 标记的地图则禁止离线挂店.
+// 设为 yes - 表示只允许在设置了 autotrade 地图标记的地图上进行离线挂店, 未设置 autotrade 标记的地图则允许离线挂店.
 at_mapflag: no
 
-// Set this to the amount of minutes autotrade chars will be kicked from the server.
+// 离线挂店的超时时间 (单位为分钟)
+// 设置为 0 表示永不超时, 否则当玩家离线挂店到设定的时间后, 将被自动踢下线.
 at_timeout: 0
 
-// Makes player cannot be attacked when autotrade? (turns player's state.monster_ignore) (Note 1)
+// 在离线挂店时, 玩家是否不会被魔物攻击? (开关选项)
 at_monsterignore: no
 
 // Should autotrade trigger OnPCLogout script events? (Note 1)
 at_logout_event: yes
 
-// Auction system, fee per hour. Default is 12000
+// 拍卖系统每小时收取的服务费用是多少? (默认为 12000 Zeny)
 auction_feeperhour: 12000
 
-// Auction maximum sell price
+// 拍卖的成交价格最大不能超过多少? (默认值为 500000000 Zeny)
 auction_maximumprice: 500000000
 
-// Minimum delay between each store search query in seconds.
+// 使用露天商店检索卡时, 两次查询的间隔时间是多少秒?
+// 此选项主要用来降低地图服务器的查询压力, 不过以现在普遍的在线玩家数量,
+// 就算填写 1 秒也不会带来什么压力.
 searchstore_querydelay: 10
 
-// Maximum amount of results a store search query may yield, before
-// it is canceled.
+// 使用露天商店检索卡时, 每次查询最多返回的记录数量.
 searchstore_maxresults: 30
 
-// Whether or not gaining and loosing of cash points is displayed (Note 1).
-// Default: no
+// 当玩家的商城点数(Cash Point)有变化时, 在聊天栏中显示提示信息 (开关选项).
+// 默认值为: no
 cashshop_show_points: no
 
-// Whether or not mail box status is displayed upon login.
-// Default: 0
-// 0 = No
-// 1 = Yes
-// 2 = Yes, when there are unread mails
+// 登录时是否在聊天栏显示邮箱的信件状态: 你有 %d 封新邮件 (收件箱共有 %d 封未读邮件).
+// 默认值为: 0
+// 0 = 不显示
+// 1 = 只要登陆就显示, 无论是否有未读邮件
+// 2 = 有未读邮件时才显示
 mail_show_status: 0
 
-// Amount of mails a user can send a day.
+// 用户每天可以发送的邮件数量.
 // Default: 100
 // 0 = Unlimited
 mail_daily_count: 100
 
-// Fee for transferring zeny via mail (Note 2)
+// 邮寄zeny的费用率(注2)
 // NOTE: this rate is hardcoded in the client, you need to diff your client accordingly if you change this value.
 // Default: 2(2%)
 // 0 = No fee
 mail_zeny_fee: 2
 
-// Amount of zeny to pay for each attached item
+// 每个附件道具所需要支付zeny的金额
 // NOTE: this fee is hardcoded in the client, you need to diff your client accordingly if you change this value.
 // Default: 2500
 // 0 = No fee
 mail_attachment_price: 2500
 
-// Maximum weight in total that can be attached to a mail
+// 可以附在邮件上的最大总重量
 // NOTE: this limit is hardcoded in the client, you need to diff your client accordingly if you change this value.
 // Default: 2000
 // 0 = No weight limit
 mail_attachment_weight: 2000
 
-// Is monster transformation disabled during Guild Wars?
-// If set to yes, monster transforming is automatically removed/disabled when enterting castles during WoE times
+// GVG攻城战开始之后, 进入GVG公会城堡地图是否自动禁用变身成魔物的效果?
+// 若设置为 yes, 那么使用 transform 和 active_transform 脚本指令带来的变身效果,
+// 将会在进入公会城堡的时候被移除/禁用.
 mon_trans_disable_in_gvg: no
 
-// Is item's price at item/point shop discountable?
-// 0 = No (Default)
-// 1 = Item shops
-// 2 = Point shops
-// 3 = Item & point shops
+// 以物品或变量作为货币的商店, 是否会受“低价买进”和“高价卖出”技能的打折影响?
+// 0 = 不打折 (默认值)
+// 1 = 以物品作为货币的商店能够打折 (itemshop类型)
+// 2 = 以变量作为货币的商店能够打折 (pointshop类型)
+// 3 = 以物品或变量作为货币的商店都可以打折
 discount_item_point_shop: 0
 
-// Don't display message "login-serv has been asked to %s the player '%.*s'." (Note 1)
+// 当玩家的VIP时间被调整时是否在聊天栏中显示:
+// 登录服务器已被请求进行VIP操作, 被处理玩家为 '%.*s'. (开关选项)
+//
+// 提示: 此选项仅在启用VIP会员系统的情况下可用
+// 默认值为: no
 disp_servervip_msg: no
 
-// Delay to allow user resend new mail (default & minimum is 1000)
+// 玩家连续两次发送邮件的最小间隔时间, 单位为毫秒 (默认值 & 最小值为: 1000)
+// 此选项用来防止玩家发完一封邮件后, 立刻发送第二封邮件, 否则如果被有心人利用的话, 
+// 可以瞬间塞满其他玩家的邮箱.
 mail_delay: 1000
 
-// Hides items from the player's favorite tab from being sold to a NPC. (Note 1)
+// 被玩家收藏的道具不出现在商店 NPC 的道具出售列表中. (开关选项)
 hide_fav_sell: no
