--- a/conf/battle/party.conf
+++ b/conf/battle/party.conf
@@ -34,12 +34,19 @@ party_update_interval: 1000
 // 1: 模拟器方式 - 更新 HP 血条使用和小地图位置一样的策略, 每隔一段时间更新一次
 party_hp_mode: 0
 
-// NOTE:
-// The level range for sharing within a party is set in conf/inter_athena.conf
-// under the value "party_share_level".
+// 提示:
+// 玩家之间组队均分经验的等级限制 是在 conf/inter_athena.conf 的 party_share_level 选项进行设置.
 
-// When 'Party Share' item sharing is enabled in a party, 
-// announce in the party which party-member received the item and what's he received? (Note 1)
+// 当组队设置中的“谁能捡取掉落的物品”或“捡到的物品如何分配”被开启时,
+// 是否公告其他队员捡到物品的信息? (开关选项)
+//
+// 这里的“开启”是指:
+// 谁能捡取掉落的物品 - 设置为 “队员均可捡取”, 这就意味着开启
+// 捡到的物品如何分配 - 设置为 “均等分配”, 这就意味着开启
+// 
+// 检查是否需要公告的时机为:
+// - 允许队员捡取物品的情况下, 有某个队员捡起物品时会检查是否需要公告
+// - 捡到物品随机分配给队员的情况下, 某个队员被随机分配拾取到物品时会检查是否需要公告
 show_party_share_picker: yes
 
 // 当 show_party_share_picker 为启用(yes)时, 捡到什么类型的物品会被公告?
