--- a/conf/battle/pet.conf
+++ b/conf/battle/pet.conf
@@ -48,37 +48,112 @@ pet_attack_support: no
 // 主人被攻击时, 宠物是否会自动反击? (开关选项)
 pet_damage_support: no
 
-// Minimum intimacy necessary for a pet to support their master. Default is 900 
-// (intimacy goes from 0 to 1000). At this minimum, support rate is 50% of pet's normal value.
-// At max (1000) support rate is 150%.
-pet_support_min_friendly: 900
+// 宠物使用技能或做出援护攻击的最低亲密度限制. 默认为 900.
+// 亲密度的范围为 0~1000, 1000 表示非常亲密, 0 表示非常陌生.
+// 若宠物的亲密度没有达到此选项设定的值, 那么绝对不会使用技能或做出援护攻击.
+// 
+// 假设此选项的值为 900 不变, 那么:
+// - 当亲密度刚达到此选项设定的值时, 概率修正值将等于 500
+// - 当亲密度达到1000的话, 概率修正值将等于 1500
+// 
+// 注意: 概率修正值是用来在宠物最终判定是否要使用技能和做出援护攻击用的,
+//       在下面 pet_support_rate 选项的说明中有用到.
+// 
+// ===========================
+// 概率修正值的计算方法
+// ===========================
+// 1000 x (宠物现在的亲密度 - pet_support_min_friendly的值) / (1000 - pet_support_min_friendly的值) + 500
+// 
+// 例如你的宠物现在的亲密度为975, 假设 pet_support_min_friendly 的值为 900 的话,
+// 套用公式 = 1000 x (975 - 900) / (1000 - 975) + 500
+//          = 1000 x 75 / 25 + 500
+//          = 7500 / 25 + 500
+//          = 300 + 800
+//          = 1100
+// 最后再乘以 pet_support_rate 定义的百分比,
+// 若 pet_support_rate 为 100 则 1100 x 100% = 概率修正值为 1100,
+// 若 pet_support_rate 为 50  则 1100 x 50%  = 概率修正值为 550!
+pet_support_min_friendly: 800
 
-// Whether or not the pet's will use skills. (Note 1)
-// Note: Offensive pet skills need at least pet_attack_support or 
-// pet_damage_support to work (they trigger while the pet is attacking).
+// 宠物是否会使用技能? (开关选项)
+// 注意: 若关闭此选项, 那么宠物在pet_db中配置的pet_script脚本将不会被执行.
+//       包括拾取物品也将不会被执行, 因为拾取物品就是宠物的一项“技能”.
+// 
+// 进攻性的宠物技能需要至少启用了 pet_attack_support 或 pet_damage_support
+// 选项才能够正常工作(拾取物品这种属于非进攻性的技能, 能构成伤害的都算进攻性技能)
 pet_status_support: no
 
-// Rate at which a pet will support it's owner in battle. (Note 2)
-// Affects pet_attack_support & pet_damage_support.
+// 宠物使用技能或做出援护攻击的概率. (百分比选项)
+// 此选项会影响 pet_attack_support 和 pet_damage_support 的触发概率.
+//
+// 注意: 下面会用到一个叫“概率修正值”的东西, 在 pet_support_min_friendly 选项的说明中有讲解.
+// 
+// 宠物做出主动攻击的概率算法为:
+// (宠物数据库PetDB中的第18个字段(attack_rate)的值 x 概率修正值) / 1000
+//
+// 宠物做出援护攻击的概率算法为:
+// (宠物数据库PetDB中的第19个字段(defence_attack_rate)的值 x 概率修正值) / 1000
 pet_support_rate: 100
 
-// Does the pets owner receive exp from the pets damage?
+// 宠物对魔物造成伤害在魔物死亡后进行经验值结算时, 主人是否可以获得这部分经验?
+// 如果设置为 no 的话, 那么表示主人得不到自己宠物带来的这部分经验.
 pet_attack_exp_to_master: no
 
-// The rate exp. is gained from the pet attacking monsters
+// 宠物对魔物造成伤害所得的经验值倍率 (百分比选项)
+// 
+// 根据 exp.conf 中的 exp_calc_type 选项, 玩家、生命体、宠物、佣兵、元素精灵等单位在对魔物造成伤害
+// 最终导致魔物死亡后, 会根据各个单位造成的伤害值来计算每个单位应该获得多少经验
+// 
+// 这里的选项就是用来控制宠物获得的经验值倍率用的, 假如宠物给魔物带来了 15% 的伤害, 
+// 最终分到的经验值是 150 点的话, 那么此选项如果设置为 200 (即两倍), 那么宠物能拿到 150 x 200% = 300 点经验
+//
+// 至于宠物拿到的经验会用在什么地方, 最常见的就是当 pet_attack_exp_to_master 选项为 yes 时
+// 把宠物应得的这部分经验值送给宠物的主人.
 pet_attack_exp_rate: 100
 
-// Pet leveling system. Use 0 to disable (default).
-// When enabled, a pet's level is a fixed % of the master's. (Note 2)
-// If 200%, pet has double level, if 50% pet has half your level, etc.
+// 宠物升级系统. 设置为 0 表示关闭此功能(默认).
+// 若启用宠物升级系统, 那么宠物的等级将会是主人基础等级的百分比. (百分比选项)
+//
+// 举个例子:
+// 若填写 200 (表示两倍), 那么宠物的等级将会是主人基础等级的两倍 (主人10级宠物20级, 主人40级宠物80级).
 pet_lv_rate: 0
 
-// When pet leveling is enabled, what is the max stats for pets?
+// 当宠物升级系统启用时, 宠物的最大能力属性点是多少?
+//
+// 因为宠物升级的时候, 它的STR\AGI\VIT\INT\DEX\LUK也会提升, 
+// 这里就是为了防止宠物能力属性提升得过高, 而设置的一个限制阀值.
 pet_max_stats: 99
 
-// When pet leveling is enabled, these are the imposed caps on
-// min/max damage. Note that these only cap atk1 and atk2, if you 
-// enable pet_str, their max damage is then their base_atk + pet_max_atk2
+// 当宠物升级系统启用时, 宠物能造成的最小/最大伤害值.
+//
+// ===== 在没开启宠物升级系统的时候 =====
+// 宠物的 atk1(最小伤害) 和 atk2(最大伤害)等于宠物在 mob_db 中配置的
+// 相同编号的魔物的 ATK1, ATK2 字段的值.
+// 
+// 例如: 波波利宠物的ID是 1031, 而在 mob_db 中 1031 这只魔物的 ATK1 和 ATK2 分别是 74 和 94,
+// 那么波波利这类宠物, 在没有开启宠物升级系统的时候, atk1 就是 74, atk2 就是 94.
+//
+// ===== 当宠物升级系统启用时 =====
+// 那么地图服务器会先计算宠物每升一级 atk1 和 atk2 增加的量是多少:
+// - 每升一级 atk1 增加的量 = mob_db 中的 atk1 字段的值 / mob_db 中的 LV 字段的值 = 74 / 30(波波利的等级是30级) = 2.46 丢弃小数部分 = 2
+// - 每升一级 atk2 增加的量 = mob_db 中的 atk2 字段的值 / mob_db 中的 LV 字段的值 = 94 / 30(波波利的等级是30级) = 3.13 丢弃小数部分 = 3
+// 
+// 然后根据上面的 pet_lv_rate 选项, 根据主人现在的基础等级, 
+// 计算出宠物应有的等级, 最后:
+// - 最终 atk1 的值 = 每升一级 atk1 增加的量 x 宠物等级
+// - 最终 atk2 的值 = 每升一级 atk2 增加的量 x 宠物等级
+//
+// ===== 但是这引发了一个问题 =====
+// 只要宠物的等级足够高(比如 pet_lv_rate 被设置为是主人等级的10倍), 
+// 那么有可能宠物的最终 atk1 和 atk2 会变得很大,
+// 那么此时就需要设置一个限制阀值, 防止 atk1和 atk2 超大而导致失去平衡.
+// 这两个阀值也就是本选项的 pet_max_atk1 和 pet_max_atk2:
+// - pet_max_atk1 选项是用来限制宠物的 atk1 最大值
+// - pet_max_atk2 选项是用来限制宠物的 atk2 最大值
+// 
+// 注意: 这里只是用来限制 atk1 和 atk2, 而实际上宠物能造成的伤害还会根据其他的参数进行修正
+// 比如属性抵抗, 以及 battle.conf 中 enable_baseatk 选项是否允许宠物拥有 base_atk 等,
+// 若 enable_baseatk 允许宠物拥有 base_atk, 那么宠物能造成的最大伤害应该是 base_atk + pet_max_atk2
 pet_max_atk1: 500
 pet_max_atk2: 1000
 
@@ -87,7 +162,19 @@ pet_max_atk2: 1000
 // 并且 在GVG 地图中无法被孵化.
 pet_disable_in_gvg: no
 
-// Will does petskillattack2 fixed damage ignore plant infnite defense? (Note 1)
+// 当宠物使用 petskillattack2 指令所定义的技能发起定量多段伤害攻击时, 
+// 是否无视植物类魔物的防御? (开关选项)
+//
+// 解释一下“定量多段伤害攻击”: “定量”就是指固定输出的伤害,
+// “多段”就是打到魔物时候的扣血次数, 比如二刀连击就是“二段”, 音速投掷的段数就更高了.
+// 
+// 在宠物的 pet_db 中, 能够使用 petskillattack2 去定义宠物使用的技能,
+// 而 petskillattack2 的特点就是可以固定对魔物造成的伤害量, 以及设定伤害的段数.
+// 这样就会引出一个冲突: 
+// 当宠物使用这种“定量多段伤害攻击”去攻击植物类魔物的时候,
+// 是否应该无视它们的防御? (如果有视防御, 那么每段只能打 1 滴血)
+//
+// 默认值为: yes
 pet_ignore_infinite_def: yes
 
 // 当宠物的主人死亡之后, 宠物是否会继续攻击? (开关选项)
