--- a/conf/battle/skill.conf
+++ b/conf/battle/skill.conf
@@ -22,19 +22,19 @@
 //             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
-// The rate of time it takes to cast a spell (Note 2, 0 = No casting time)
+// 魔法咏唱时间的比率 (注意事项 2, 0 = 无须咏唱 )
 casting_rate: 100
 
-// Delay time after casting (Note 2)
+// 玩家技能公共延迟按百分比调整 (注意事项 2)
 delay_rate: 100
 
-// Does the delay time depend on the caster's DEX and/or AGI? (Note 1)
-// Note: On Official servers, neither Dex nor Agi affect delay time
+// 玩家技能公共延迟是否受角色 Dex/Agi 值的影响 (注意事项 1)
+// 注: 官方设定 Dex 并不会影响硬质时间
 delay_dependon_dex: no
 delay_dependon_agi: no
 
-// Minimum allowed delay for ANY skills after castbegin (in milliseconds) (Note 1)
-// Note: Setting this to anything above 0 can stop speedhacks.
+// 使用技能后硬直最小时间 (注意事项 3)
+// 注: 使用 0 以上的任何设定可防止无限攻击外挂
 min_skill_delay_limit: 100
 
 // This delay is the min 'can't walk delay' of all skills.
@@ -50,10 +50,10 @@ default_walk_delay: 300
 //  min_skill_delay_limit.
 no_skill_delay: 2
 
-// At what dex does the cast time become zero (instacast)?
+// 角色的 Dex 值达到多少时咏唱时间为零 (无须咏唱)
 castrate_dex_scale: 150
 
-// How much (dex*2+int) does variable cast turns zero?
+// 角色的 (dex*2+int) 值达到多少变量可以投变为零
 vcast_stat_scale: 530
 
 // On official servers, amotion delay is applied at castbegin. There is no amotion delay applied
@@ -63,45 +63,45 @@ vcast_stat_scale: 530
 // If you want to be secure, a value between 90 and 140 is recommended.
 skill_amotion_leniency: 0
 
-// Will normal attacks be able to ignore the delay after skills? (Note 1)
+// 使用技能后的硬直时间内是否可以发动普通攻击? (注意事项 1)
 skill_delay_attack_enable: yes
 
-// Range added to skills after their cast time finishes.
-// Decides how far away the target can walk away after the skill began casting before the skill fails.
+// 增加玩家施展技能的距离 (增加多少格 / 0)
+// 指玩家释放单体技能念咒结束后怪物离开多远仍能进行攻击
 // 0 disables this range checking (default)
 skill_add_range: 0
 
-// If the target moves out of range while casting, do we take the items and SP for the skill anyway? (Note 1)
+// 当敌人离开技能施展距离而导致技能使用失败时是否消耗 SP 与道具 (注意事项 1)
 skill_out_range_consume: no
 
-// Does the distance between caster and target define if the skill is a ranged skill? (Note 3)
-// If set, when the distance between caster and target is greater than 3 the skill is considered long-range, otherwise it's a melee range.
-// If not set, then the range is determined by the skill's range (if it is above 5, the skill is ranged).
-// Default 14 (mobs + pets + homun)
+// 当一个技能为范围技能时，技能发动者与目标之间的距离是否被重新定义 (注意事项 3)
+// 如果设定,技能发动者与目标之间距离大于3的范围技能将被判断为远程,否则为近战
+// 如果不设定,则根据技能本身的范围定义 (if it is above 5, the skill is ranged).
+// 预设为 14 (魔物 + 宠物 + 人工生命体)
 skillrange_by_distance: 14
 
-// Should the equipped weapon's range override the skill's range defined in the skill_db for most weapon-based skills? (Note 3)
-// NOTE: Skills affected by this option are those whose range in the skill_db are negative. By default always the skill range is used.
+// 被装备武器的范围是否无视 skill_db 中技能范围的定义而变成技能的范围 (注意事项 3)
+// 注意: 即使某技能在 skill_db 中的范围为负数，依然受此选项的影响
 // Note that if you want all monster skills to have a range of 9 you need to set monster_ai&0x400.
 skillrange_from_weapon: 0
 
-// Should a check on the caster's status be performed in all skill attacks?
-// When set to yes, meteors, storm gust and any other ground skills will have 
-// no effect while the caster is unable to fight (eg: stunned).
+// 是否允许施法者的位置上进行技能攻击?
+// 当设置为 yes 时，流星雨、暴风雨等技能没有影响 
+// 对施法者无法抵御 (例如: 目瞪口呆).
 skill_caster_check: yes
 
-// Should ground placed skills be removed as soon as the caster dies? (Note 3)
+// 发动者死亡时，其发动的范围技能是否立即取消? (注意事项 3)
 clear_skills_on_death: 0
 
-// Should ground placed skills be removed when the caster changes maps? (Note 3)
+// 发动者变换地图时，其发动的范围技能是否立即取消? (注意事项 3)
 clear_skills_on_warp: 15
 
-//Setting this to YES will override the target mode of ground-based skills with the flag 0x01 to "No Enemies"
+// 防御单位（SW/灵气）等，是否影响到怪物
 //The two skills affected by default are Pneuma and Safety Wall (if set to yes, those two skills will not protect everyone, but only allies)
 //See db/(pre-)re/skill_db.yml for more info.
 defunit_not_enemy: no
 
-// Should skills always do at least 'hits' damage when they don't miss/are blocked?
+// 当技能攻击 miss 时，是否给予最小损伤 1，意即: 技能攻击是否永远不会 miss (注意事项 1)
 // Many skills will have their damage multiplied by their number of hits (see skill_db), these will always deal 1 HP
 // damage per hit, even against plants. But some skills are actually a single hit that is just displayed as multiple
 // hits. For these skills, damage gets divided by number of hits and rounded down. That means that plants won't take
@@ -110,25 +110,25 @@ defunit_not_enemy: no
 // Values: 1 for weapon-based attacks, 2 for magic attacks, 4 for misc attacks.
 skill_min_damage: 0
 
-// The delay rate of monk's combo (Note 2)
+// 武僧的连续技硬直时间比率 (注意事项 2)
 combo_delay_rate: 100
 
-// Use alternate auto Counter Attack Skill Type? (Note 3)
+// 使用反击技能模式? (注意事项 3)
 // For those characters on which it is set, 100% Critical,
 // Otherwise it disregard DEF and HIT+20, CRI*2
 auto_counter_type: 15
 
-// Can ground skills be placed on top of each other? (Note 3)
+// 允许重复放置一部分地面技能 (注意事项 3)
 // By default, skills with UF_NOREITERATION set cannot be stacked on top of 
 // other skills, this setting will override that.
 skill_reiteration: 0
 
-// Can ground skills NOT be placed underneath/near players/monsters? (Note 3)
+// 禁止将一部分地面技能直接放置在玩家和怪物的脚下? (注意事项 3)
 // If set, only skills with UF_NOFOOTSET set will be affected.
 skill_nofootset: 1
 
-// Should traps (hunter traps + quagmire) change their target to "all" inside gvg/pvp grounds? (Note 3)
-// Default on official servers: 1 (for players)
+// 是否根据skill_db.txt的设定来限制在地面放置技能的数目限制? (注意事项 3)
+// Default on official servers: yes for player-traps
 gvg_traps_target_all: 1
 
 // Traps visibility setting (trap with UF_HIDDEN_TRAP flag):
@@ -138,65 +138,61 @@ gvg_traps_target_all: 1
 // Default on official servers: 0 for Pre-renewal, 2 for Renewal
 //traps_setting: 0
 
-// Restrictions applied to the Alchemist's Summon Flora skill (add as necessary)
-// 1: Enable players to damage the floras outside of versus grounds.
-// 2: Disable having different types out at the same time
+// 炼金术士的生物调拨技能限制 (根据需要添加)
+// 1: 同时召唤多种类型魔物 , 召唤者与玩家能攻击召唤魔物.
+// 2: 禁止同时召唤不同类型魔物
 //    (eg: forbid summoning anything except hydras when there's already 
 //     one hydra out)
 summon_flora_setting: 3
 
-// Whether placed down skills will check walls (Note 1)
-// (ex. Storm Gust cast against a wall will not hit the other side.) 
+// 发动技能时是否检查墙面 (注意事项 1)
+// 如果设置则不能对发动在墙边
 skill_wall_check: yes
 
-// When cloaking, Whether the wall is checked or not. (Note 1)
-// Note: When the skill does not checks for walls, you will always be considered
-//  as if you had a wall-next to you (you always get the wall-based speed). 
-//  Add the settings as required, being hit always uncloaks you.
-// 
-// 0 = doesn't check for walls
-// 1 = Check for walls
-// 2 = Cloaking is not cancelled when attacking.
-// 4 = Cloaking is not cancelled when using skills
+// 伪装时是否检测墙壁 (注意事项 1 / yes)
+// 注: 当设定为 no 时, 即使伪装等级小于 3 , 移动速度仍不会变慢
+// no or 0 = 不检测墙壁(没有墙壁也能伪装)
+// 1 = 检测墙壁
+// 2 = 攻击时伪装不取消
+// 4 = 使用技能时伪装不取消
 player_cloak_check_type: 1
 monster_cloak_check_type: 4
 
-// Can't place unlimited land skills at the same time (Note 3)
+// 是否能同时放置无限的地面技能 (注意事项 3)
 land_skill_limit: 9
 
-//Determines which kind of skill-failed messages should be sent:
-// 1 - Disable all skill-failed messages.
-// 2 - Disable skill-failed messages due to can-act delays.
-// 4 - Disable failed message from Snatcher
-// 8 - Disable failed message from Envenom
+//什么类型的技能施会显示失败 [技能使用失败]:
+// 1 - 关闭所有技能失败讯息
+// 2 - 关闭技能失败讯息在技能咏唱中被中断时
+// 4 - 关闭技能失败讯息在流氓抢夺失败时
+// 8 - 关闭技能失败讯息在施毒时
 display_skill_fail: 2
 
-// Can a player in chat room (in-game), be warped by a warp portal? (Note 1)
+// 传送之阵是否可以传送正在聊天室里面的角色 (注意事项 1)
 chat_warpportal: no
 
-// What should the wizard's "Sense" skill display on the defense fields?
-// 0: Do not show defense
-// 1: Base defense [RE default]
-// 2: Vit/Int defense
-// 3: Both (the addition of both) 
+// 巫师的 sense 技能如何在防御地区显示(难道是怪物情报？)
+// 0: 不显示防御
+// 1: 基本防御 [RE default]
+// 2: Vit 或 Int 的防御
+// 3: 全部显示 (两者相加) [预设]
 sense_type: 1
 
-// Which finger offensive style will be used?
-// 0 = Aegis style (single multi-hit attack)
-// 1 = Athena style (multiple consecutive attacks)
+// 弹指神通的技能样式设定
+// 0 = Aegis 样式 (single multi-hit attack)
+// 1 = Athena 样式 (multiple consecutive attacks)
 finger_offensive_type: 0
 
-// Grandcross Settings (Don't mess with these)
-// If set to no, hit interval is increased based on the amount of mobs standing on the same cell
-// (means that when there's stacked mobs in the same cell, they won't receive all hits)
+// 圣十字审判相关设定
+// 魔物重叠的情况下也一定强制攻击 3 次 (预设值是 : no)
 gx_allhit: no
 
-// Grandcross display type (Default 1)
-// 0: Yellow character
-// 1: White character
+// 圣十字审判的显示形式 (预设值是 : 1)
+// 0: 黄色文字
+// 1: 白色文字
 gx_disptype: 1
 
-// Max Level Difference for Devotion
+// 十字军的牺牲技能使用对像等级与本身等级的差异范围
 devotion_level_difference: 10
 
 // Using 'old' behavior for devotion vs reflect damage? (Note 2)
@@ -217,23 +213,23 @@ devotion_rdamage_skill_only: yes
 // Official: no
 devotion_standup_fix: yes
 
-// If no than you can use the ensemble skills alone. (Note 1)
+// 协作技能是否禁止单人使用 (注意事项 1 : 设定为 no 则单人即可使用)
 player_skill_partner_check: yes
 
-// Remove trap type
-// 0 = Aegis system : Returns 1 'Trap' item
-// 1 = Athena system : Returns all items used to deploy the trap
+// 陷阱移除效果模式
+// 0 : 官方模式 -- 取回一个陷阱
+// 1 = Athena 模式 : Returns all items used to deploy the trap
 skill_removetrap_type: 0
 
-// Does using bow to do a backstab give a 50% damage penalty? (Note 1)
+// 装备弓使用背刺时伤害是否修正为 50%  (注意事项 1)
 backstab_bow_penalty: yes
 
-// How many times you could try to steal from a mob.
-// Note: It helps to avoid stealing exploit on monsters with few rare items
-// Use 0 to disable (max allowed value is 255)
+// 你可以对魔物偷取的次数
+// Note: 有助于避免盗取少数稀有物品
+// 0 为不使用 (最大为 255)
 skill_steal_max_tries: 0
 
-// Does Berserk/Frenzy cancel other self-buffs when used?
+// 使用波色克药水时，是否取消浅黄色效果?
 berserk_cancels_buffs: no
 
 // Level and Strength of "MVP heal". When someone casts a heal of this level or
@@ -241,7 +237,7 @@ berserk_cancels_buffs: no
 max_heal: 9999
 max_heal_lv: 11
 
-// Emergency Recall Guild Skill setting (add as appropriate).
+// 紧急呼叫 工会技能设定 (add as appropiate).
 // Note that for the skill to be usable at all, 
 // you need at least one of 1/2 and 4/8
 // 1: Skill is usable outside of woe.
@@ -252,7 +248,7 @@ max_heal_lv: 11
 //    (it will work on GVG castles even if they are set to nowarpto, though)
 emergency_call: 11
 
-// Guild Aura Skills setting (add as appropriate).
+// 工会技能相关设定 (add as appropiate).
 // (This affects GD_LEADERSHIP, GD_GLORYWOUNDS, GD_SOULCOLD and GD_HAWKEYES)
 // Note that for the skill to be usable at all, 
 // you need at least one of 1/2 and 4/8
@@ -263,49 +259,48 @@ emergency_call: 11
 //16: Disable skill from affecting Guild Master
 guild_aura: 31
 
-// Max Possible Level of Monster skills
-// Note: If your MVPs are too tough, reduce it to 10.
+// 魔物技能的最大级别
+// Note: 如果你的MVP太强横,可以设定到10
 mob_max_skilllvl: 100
 
-// Allows players to skip menu when casting Teleport level 1
-// Menu contains two options. "Random" and "Cancel"
+// 当传送之阵等级为1时, 是否需要弹出窗口询问玩家是否需要随机传送?
 skip_teleport_lv1_menu: no
 
-// Allow use of SG skills without proper day (Sun/Moon/Star) ?
+// 允许使用 SG 不论是否在特定天气 (太阳/月亮/星星) ?
+// 不受环境状态(太阳/月亮/星星)限制使用相关技能
 allow_skill_without_day: no
 
-// Allow use of ES-type magic on players?
+// 是否允许 ES-type 的魔法应用于玩家？
 allow_es_magic_player: no
 
-// Miracle of the Sun, Moon and Stars skill ratio (100% = 10000)
+// 太阳、月亮、星星的奇迹技能的发动机率 (100% = 10000)
 sg_miracle_skill_ratio: 2
 
-// Miracle of the Sun, Moon and Stars skill duration in milliseconds
+// 太阳、月亮、星星的奇迹技能的持续时间(用毫秒表示)
 sg_miracle_skill_duration: 3600000
 
-// Angel of the Sun, Moon and Stars skill ratio (100% = 10000)
+// 太阳、月亮、星星的天使技能的发动机率 (100% = 10000)
 sg_angel_skill_ratio: 10
 
-// Skills that bHealPower has effect on
-// 1: Heal, 2: Sanctuary, 4: Potion Pitcher, 8: Slim Pitcher, 16: Apple of Idun
+// 治愈术恢复量增加 bHealPower(技能治愈效果) 可以应用于
+// 1: 治愈术、2: 光耀之堂、4: 药水投掷、8: 纤细药水投掷、16: 伊登的苹果
 skill_add_heal_rate: 7
 
-// Whether the damage of EarthQuake with a single target on screen is able to be reflected.
-// Note: On official servers, EQ is reflectable when there is only one target on the screen, 
-//	 which might be an exploit to hunt the MVPs.
+// 当技能 "地崩" 只针对单人使用时，则可以反射伤害
+// 附注: 在官方伺服器中，只允许在画面中只有单人的伤害可以反射
+//	 并且可以计算在伤害 MVP 的累积之中
 eq_single_target_reflectable: yes
 
-// On official server, you will receive damage from Reflection and some Tarot Card even in invincible status.
-// When this setting is enabled, it allows you to immune to all kinds of damage, including those stated previous.
-// (The number will show but no actual damage will be done)
+// 官方服务器反射盾和塔罗牌可以对无敌状态造成伤害
+// 激活此设置可以使无敌状态使任何伤害无效。（伤害数字会显示但不会真正造成伤害）
 invincible.nodamage: no
 
-// Dancing Weapon Switch
-// On official servers, a fix is in place that prevents the switching of weapons to cancel songs.
-// Default: yes
+// 舞蹈时是否可以切换武器
+// 在一个固定的地方，防止取消歌曲的切换武器
+// 默认: yes
 dancing_weaponswitch_fix: yes
 
-// Skill Trap Type
+// 技能陷阱类型
 // On official servers if a unit is completely immune to knockback, it will still walk to the last target tile before
 // stopping when inflicted by a stopping status effect (including traps like Ankle Snare and Spiderweb). All traps on
 // the way will be activated.
@@ -323,24 +318,24 @@ skill_trap_type: 0
 // Note: If you knock the target out of the area it will only be hit once and won't do splash damage
 bowling_bash_area: 0
 
-// Pushback behavior (Note 1)
-// On official servers, hitting a wall will always cause the unit to stop moving.
-// If "no", the unit will continue moving when approaching walls diagonally (old Athena behavior).
+// Pushback behavior (开关选项)
+// 在官方服务器上，撞墙会使单位停止移动。.
+// 如果“no”，单位将继续移动接近墙壁对角线（旧Athena行为）
 path_blown_halt: yes
 
-// Taekwon Mission mob name check
-// iRO Wiki States: If your target is Goblin, any monster called "Goblin" will count toward the mission.
+// 跆拳道任务魔物名称检查
+// iRO Wiki: 如果你的目标是Goblin，任何被称为“Goblin”的怪物都会向任务计数。.
 // 0: Off (default)
-// 1: All 5 of the Goblin monsters will count, regardless of Mob ID (Mob ID: 1122-1126) - iRO default
-// 2: Any monster with the same exact name will count, regardless of Mob ID - Comparison based off of jName
+// 1: 所有的Goblin怪物都会计数，不管魔物是否为任务魔物。 (Mob ID: 1122-1126) - iRO default
+// 2: 任何具有相同名称的怪物都将计数，不管 MOB ID 而是基于 jName 比较。
 taekwon_mission_mobname: 0
 
-// Can a player Teleport on top of a Map Warp Portal? (Note 1)
-// On official servers players have been unable to do so.
+// 玩家可以在地图传送点上打开传送之阵吗? (开关选项)
+// 在官方服务器上，玩家已经不能这么做了.
 teleport_on_portal: no
 
-// Is the knockback direction for Cart Revolution always West? (Note 1)
-// On official servers it will knock the target always to the West. If disabled it will knock the target backwards.
+// 手推车攻击 击退的方向永远是西边? (开关选项)
+// 在官方服务器上，它总是把目标向西方击退。如果被禁用，它将向后击退目标。.
 cart_revo_knockback: yes
 
 // On official servers, Arrow Shower blow direction always rely on skill placed location to target instead of caster to target
