--- a/conf/battle/feature.conf
+++ b/conf/battle/feature.conf
@@ -88,19 +88,19 @@ feature.roulette: on
 // 此选项只有客户端版本大于等于 2015-05-13aRagexe 才支持. 
 feature.achievement: on
 
-// Equipment Switch (Note 1)
+// 一键换装功能 (Note 1)
 // Requires: 2017-02-08bRagexeRE or later
 feature.equipswitch: on
 
-// Pet evolution (Note 1)
+// 宠物进化功能 (Note 1)
 // Requires: 2014-10-08aRagexe or later
 feature.petevolution: on
 
-// Automatic Pet Feeding (Note 1)
+// 宠物自动喂养功能 (Note 1)
 // Requires: 2014-10-08aRagexe or later
 feature.petautofeed: on
 
-// At which hunger rate should pet autofeeding trigger? (Note 2)
+// 饥饿率到达多少.宠物自动喂食触发.? (Note 2)
 // Default: 89
 feature.pet_autofeed_rate: 89
 
@@ -108,7 +108,7 @@ feature.pet_autofeed_rate: 89
 // 此选项只有客户端版本大于等于 2017-09-20bRagexeRE 才支持.
 feature.homunculus_autofeed: on
 
-// At which rate should homunculus autofeeding trigger? (Note 2)
+// 饥饿度为多少时.生命体自动喂养? (Note 2)
 // Default: 30
 //
 // NOTE:
@@ -117,10 +117,10 @@ feature.homunculus_autofeed: on
 // it reaches the limit that is hardcoded in the client.
 feature.homunculus_autofeed_rate: 30
 
-// Attendance System (Note 1)
+// 每日签到系统 (Note 1)
 // Requires: 2018-03-07bRagexeRE or later
 feature.attendance: on
 
-// Private Airship System (Note 1)
+// 世界传送系统 (Note 1)
 // Requires: 2018-03-21aRagexeRE or later
 feature.privateairship: on
