--- a/conf/battle/monster.conf
+++ b/conf/battle/monster.conf
@@ -22,16 +22,16 @@
 //             若您填写十六进制则需要用 0x 作为数值的开头
 //--------------------------------------------------------------
 
-// The HP rate of MVPs. (Note 2)
+// MVP魔物的HP倍率. (百分比选项)
 mvp_hp_rate: 100
 
-// The HP rate of normal monsters (that is monsters that are not MVP's) (Note 2)
+// 普通魔物的HP倍率 (除了MVP魔物之外的所有魔物, 都算普通魔物) (百分比选项)
 monster_hp_rate: 100
 
-// The maximum attack speed of a monster
+// 魔物的攻击速度上限是多少? 
 monster_max_aspd: 199
 
-// Defines various mob AI related settings. (Note 3)
+// 定义各种mob AI相关设置. (Note 3)
 // 0x001: When enabled mobs will update their target cell every few iterations
 //        (normally they never update their target cell until they reach it while
 //        chasing)
@@ -109,7 +109,7 @@ chase_range_rate: 100
 // be increased by that number.
 monster_eye_range_bonus: 0
 
-// Allow monsters to be aggresive and attack first? (Note 1)
+// 允许怪物具有攻击性并先攻击? (Note 1)
 monster_active_enable: yes
 
 // 是否使用 mob_db 中的魔物名称来替换野怪召唤脚本中所使用的魔物名称?
@@ -123,7 +123,7 @@ monster_active_enable: yes
 // 默认值为: 2
 override_mob_names: 2
 
-// Monster damage delay rate (Note 1)
+// 怪物伤害延迟率 (Note 1)
 // Setting to no/0 is like they always have endure.
 monster_damage_delay_rate: 100
 
@@ -142,7 +142,7 @@ monster_loot_search_type: 1
 // Set to 0 to disable mob skills.
 mob_skill_rate: 100
 
-// Mob skill delay adjust (Note 2)
+// 魔物技能延迟调整 (Note 2)
 // After a mob has casted a skill, there is a delay before being able to
 // re-cast it. Note that skills with a delay of 0 can't be affected by this
 // setting.
@@ -152,13 +152,13 @@ mob_skill_delay: 100
 // 填写 200 的话, 地图上怪物的密度会变成之前的两倍.
 mob_count_rate: 100
 
-// Respawn rate of monsters on a map. 50 would make mobs respawn twice as fast (half delay time) (Note 2)
+// 地图上怪物的重生率。50会使怪物的重生速度增加一倍(一半延迟时间)(Note 2)
 //Note: This does not affects mobs with immediate respawn (most normal mobs)
 mob_spawn_delay: 100
 plant_spawn_delay: 100
 boss_spawn_delay: 100
 
-// Should the mobs respawn time have variance applied to it? (Note 3)
+// 魔物的重生时间应该有变化吗?(注3)
 // On official servers monsters spawned by the boss_monster command (mostly MVPs) have variance, legacy Athena behavior is that variance is applied for all mobs.
 // 0: None
 // 1: Boss monsters (official)
@@ -166,7 +166,7 @@ boss_spawn_delay: 100
 // 3: All monsters (legacy Athena)
 mob_spawn_variance: 1
 
-// Should mobs not spawn within the viewing range of players?
+// 魔物不应该在玩家的视野范围内重生吗?
 // 0 is disabled, otherwise it is the number of retries before giving up 
 // and spawning the mob within player-view anyway, unless the max (100) is used,
 // in which case the mob will not be spawned, and it'll be retried again in
@@ -200,7 +200,7 @@ force_random_spawn: no
 // 那么也会变成一个神奇的“能移动、不随机移动、能攻击”的绿草. (可以自己修改试试, 挺有趣的)
 slaves_inherit_mode: 4
 
-// Do summon slaves have the same walking speed as their master?
+// 召唤的魔物小弟的行走速度和主人一样吗??
 // NOTE: The default is 3 for official servers.
 // 0: Never.
 // 1: If the master can walk
@@ -223,7 +223,7 @@ retaliate_to_master: yes
 // the skill, otherwise B will be targetted by the reaction skill.
 mob_changetarget_byskill: no
 
-// If monster's class is changed will it fully recover HP? (Note 1)
+// 如果怪物的类型发生改变了，它会完全恢复HP吗?? (Note 1)
 monster_class_change_full_recover: yes
 
 // 是否在魔物名称的附近显示一些附加信息? (掩码选项)
@@ -249,7 +249,7 @@ show_mob_info: 118
 // Zeny from mobs
 zeny_from_mobs: no
 
-// Monsters level up (monster will level up each time a player is killed and they will grow stronger)
+// 怪物升级(每次玩家被杀，怪物都会升级，他们会变得更强大)
 // Exp rate is calculated ((monster level-original monster level)*(exp*(mobs_level_up_exp rate/100)))
 // NOTE: Does not apply to WoE Guardians.
 mobs_level_up: no
@@ -277,7 +277,7 @@ mob_npc_event_type: 1
 // will be reduced to 0.
 ksprotection: 0
 
-// Should MVP slaves retain their target when summoned back to their master?
+// 随从被召唤回主人身边时，MVP的随从应该保留他们的仇恨目标吗?
 mob_slave_keep_target: yes
 
 // 当 MVP 魔物死亡之后, 是否会产生墓碑?
@@ -288,9 +288,11 @@ mvp_tomb_enabled: yes
 // 默认值为: 9 秒
 mvp_tomb_delay: 9000
 
-// Whether or not the size of specially summoned mobs influences experience, drop rates,
-// and stats. The rates will be doubled for large mobs, and halved for small ones.
-// This is only invoked under the 'monster' command, @monsterbig, and @monstersmall. (Note 1)
+
+//特殊召唤生物的大小是否会影响经验值，掉落率，
+//大型魔物的经验将翻倍，小型魔物的经验将减半。
+//只在'monster'命令下调用@monsterbig和@monstersmall。(注1)
+
 // Default: no
 mob_size_influence: no
 
@@ -314,9 +316,10 @@ boss_icewall_walk_block: 0
 // 此选项需要客户端在 2012-04-04aRagexeRE 及更新的版本才支持.
 monster_hp_bars_info: yes
 
-// Should a monster respawn and a warning printed to the map server when a monster couldn't move for a long time?
-// This can be legit gameplay (e.g. players keeping an MVP stuck inside icewall), but if you want to prevent any
-// exploits and be notified about them, you can set this to yes.
+//当怪物长时间不能移动时，是否会有怪物重生并在地图服务器上显示警告?
+//这可能是合理的游戏玩法(例如，玩家将MVP卡在冰墙内)，但如果你想防止任何
+//攻击和被通知，你可以设置为yes。
+
 monster_stuck_warning: no
 
 // Rate at which monsters use their idle skills when there are no players nearby (Note 2)
@@ -336,6 +339,6 @@ boss_nopc_move_rate: 100
 // Area is limited to area_size battle config.
 achievement_mob_share: no
 
-// Should slaves teleport back to their master if they get too far during chase? (Note 1)
+// 如果召唤的随从在追逐中走得太远，他们是否应该传送回主人身边? (Note 1)
 // Default (Official): no
 slave_stick_with_master: no
